--- a/addition/index_addition.html
+++ b/addition/index_addition.html
@@ -179,10 +179,12 @@
                          <!-- Ссылка при наведении курсора  -->
                         <a href="app_development.html">Apple iOS 7 Development</a>               
                     </div>
-                    <div class="portfolio-item__img">   
+                    <div class="portfolio-item__img"> 
+                        <div class="portfolio_img">   
                         <p><a href="app_development.html">
-                            <class="portfolio_img" img src="img/portfolio/iPhone 7.jpg" alt="Apple iOS7 Development"></a>
+                            <img src="img/portfolio/iPhone 7.jpg" alt="Apple iOS7 Development"></a>
                         </a></p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -197,9 +199,11 @@
                         <a href="certificats.html">IT - Сертификаты </br></br></a>
                     </div>
                     <div class="portfolio-item__img">
+                        <div class="portfolio_img">  
                         <p><a href="certificats.html">
-                            <class="portfolio_img" img src="img/portfolio/Docicon_360.jpg" alt="IT - Сертификаты"></a>
+                            <img src="img/portfolio/Docicon_360.jpg" alt="IT - Сертификаты"></a>
                         </a></p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -214,9 +218,11 @@
                         <a href="3D_modeling.html">3D моделирование </br>в среде 3ds MAX</a>
                     </div>
                     <div class="portfolio-item__img">
+                        <div class="portfolio_img">
                         <p><a href="3D_modeling.html">
-                            <class="portfolio_img" img src="img/portfolio/comicon_360.jpg" alt="3D моделирование"></a>
+                            <img src="img/portfolio/comicon_360.jpg" alt="3D моделирование"></a>
                         </a></p>
+                        </div>
                     </div>
                 </div>
             </div>
