--- a/addition/3D_modeling.html
+++ b/addition/3D_modeling.html
@@ -411,17 +411,23 @@
                 <div class="col-4">
                     <p class="footer__social">Мои профили в социальных сетях:</p>
                     <p class="footer__social-icons">
-                      <a href="https://github.com/leonid-alt"  target="_blank">
-                        <i class="fa fa-github" aria-hidden="true"></i>
+                        <a href="https://t.me/leonid_alt_ru"  target="_blank">
+                        <i class="fa fa-telegram" aria-hidden="true"></i>
                         </a>
 
-                        <a href="#" target="_blank">
+                        <a href="https://vk.com/id797517622" target="_blank">
                         <i class="fa fa-vk" aria-hidden="true"></i>
                         </a>
 
+                        <a href="https://github.com/leonid-alt" target="_blank">
+                        <i class="fa fa-github" aria-hidden="true"></i>
+                        </a>
+                        
+                        <!--
                         <a href="#" target="_blank">
                         <i class="fa fa-facebook" aria-hidden="true"></i>
                         </a>
+                        
 
                         <a href="#" target="_blank">
                         <i class="fa fa-instagram" aria-hidden="true"></i>
@@ -430,7 +436,7 @@
                         <a href="#" target="_blank">
                         <i class="fa fa-youtube" aria-hidden="true"></i>
                         </a>
-
+                        -->
                     </p>
 
                 </div>
