--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -45,6 +45,12 @@
                 <a class="nav-link" href="#">Блог</a>
                 <a class="nav-link" href="#contacts">Контакты</a>
             </div>
+
+            <form action="/search" method="get">
+                <input type="text" name="query" placeholder="Поиск...">
+                <button type="submit">Искать</button>
+            </form>
+            
             <div class="flags-link">
                 <a class="flags-link-img" href="#">ru <img src="./img/flags/ru_30_20.svg" alt="русский язык">
                 </a>
@@ -156,6 +162,7 @@
 
 
 </html>
+
 
 
 
