--- a/portfolio/index_portfolio.html
+++ b/portfolio/index_portfolio.html
@@ -145,10 +145,10 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-inner">
-                <p>© Леонид Степанов <br>HTML верстальщик, создание сайтов</p>
-                
-                <!--  скрипт  календаря -->
-            <script src="./js/calendar.js"></script>
+                <p>© Леонид Степанов | HTML верстальщик, создание сайтов |
+                    <!--  скрипт  календаря -->
+                    <script src="./js/calendar.js"></script>
+                </p>
                 
                 <p><a href="https://leonid-alt.github.io/index_2.html" target="_blank">💻 Макет сверстан в VS Code +
                         Figma + Google
@@ -162,6 +162,7 @@
 
 
 </html>
+
 
 
 
