--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -1597,7 +1597,7 @@
                
            </div>
            
-           <p class="wow bounceInUp" data-wow-duration="0.0s" data-wow-delay="0.0s">&copy; Leonid N. Stepanov. All Rights Reserved<Br>
+           <p class="wow bounceInUp" data-wow-duration="0.0s" data-wow-delay="0.0s">&copy; Leonid N. Stepanov | HTML верстальщик, создание сайтов |
                <script src="./calendar.js"></script>
            </p>
            <!--  скрипт  календаря
