--- a/addition/index_addition.html
+++ b/addition/index_addition.html
@@ -142,7 +142,9 @@
         <div class="scrolldown">
           
             <!-- Ссылка при наведении курсора  -->
-                <i class="fa fa-chevron-down" aria-hidden="true" alt="Шеврон вниз" title="Прокрутка экрана вниз"></i>
+                <i class="fa fa-chevron-down" aria-hidden="true" alt="Шеврон вниз" title="Прокрутка экрана вниз">
+                    <a href="container"></a>
+                </i>
         </div>
         <!-- </div> -->
         <!-- // Контейнер кнопки  "Шеврон вниз" -->
@@ -162,7 +164,8 @@
             <!-- Контейнер кнопки  "Шеврон вверх" -->
             <div class="scrollup">
                 <!-- Ссылка при наведении курсора  -->
-                <i class="fa fa-chevron-up" aria-hidden="true" alt="Шеврон ввезх" title="Прокрутка экрана вверх"></i>
+                <i class="fa fa-chevron-up" aria-hidden="true" alt="Шеврон ввезх" title="Прокрутка экрана вверх">
+                </i>
             </div> 
             <!-- // Контейнер кнопки  "Шеврон вверх" -->
 
