--- a/addition/index_addition.html
+++ b/addition/index_addition.html
@@ -140,11 +140,12 @@
         <!-- Контейнер кнопки  "Шеврон вниз" -->
          <!-- <div class="header__arrow"> -->
         <div class="scrolldown">
-            <a href="footer">
+            
             <!-- Ссылка при наведении курсора  -->
                 <i class="fa fa-chevron-down" aria-hidden="true" alt="Шеврон вниз" title="Прокрутка экрана вниз">
+                    <a href="footer"> </a>
                 </i>
-                </a>
+               
         </div>
         <!-- </div> -->
         <!-- // Контейнер кнопки  "Шеврон вниз" -->
