--- a/addition/index_addition.html
+++ b/addition/index_addition.html
@@ -142,7 +142,7 @@
         <div class="scrolldown">
             
             <!-- Ссылка при наведении курсора  -->
-            <a class="footer" href="footer">
+            <a class="footer" href="#footer">
                 <i class="fa fa-chevron-down" aria-hidden="true" alt="Шеврон вниз" title="Прокрутка экрана вниз">
                     
                 </i>
