--- a/addition/certificats.html
+++ b/addition/certificats.html
@@ -154,6 +154,7 @@
     FOOTER
 
     ....................................-->
+    <a id="footer"></a>
     <div class="footer">
         <div class="container">
             <div class="row">
