--- a/addition/certificats.html
+++ b/addition/certificats.html
@@ -52,6 +52,7 @@
                  <!-- Ссылка при наведении курсора  -->
                  <!-- <a href="jurdoc.html"  class="title"/a> -->
                 <i class="fa fa-chevron-down" aria-hidden="true" alt="Шеврон вниз" title="Прокрутка экрана вниз"></i>
+            <a class="footer" href="#footer"></a>
             <!--</div>-->
         </div>
         
