--- a/addition/certificats.html
+++ b/addition/certificats.html
@@ -51,8 +51,9 @@
             <!--<div class="scrolldown">-->
                  <!-- Ссылка при наведении курсора  -->
                  <!-- <a href="jurdoc.html"  class="title"/a> -->
+            <a class="footer" href="#footer">
                 <i class="fa fa-chevron-down" aria-hidden="true" alt="Шеврон вниз" title="Прокрутка экрана вниз"></i>
-            <a class="footer" href="#footer"></a>
+            </a>
             <!--</div>-->
         </div>
         
