--- a/addition/certificats.html
+++ b/addition/certificats.html
@@ -47,15 +47,16 @@
         </div>
         </div>
         </div>
+        <a href="#footer">
         <div class="header__arrow">
             <!--<div class="scrolldown">-->
                  <!-- Ссылка при наведении курсора  -->
                  <!-- <a href="jurdoc.html"  class="title"/a> -->
-            <a class="footer" href="#footer">
+            
                 <i class="fa fa-chevron-down" aria-hidden="true" alt="Шеврон вниз" title="Прокрутка экрана вниз"></i>
-            </a>
             <!--</div>-->
         </div>
+        </a>
         
 
     </div>
