--- a/addition/index_addition.html
+++ b/addition/index_addition.html
@@ -139,13 +139,13 @@
 
         <!-- Контейнер кнопки  "Шеврон вниз" -->
          <!-- <div class="header__arrow"> -->
+        <a href="#footer">
         <div class="scrolldown">
             <!-- Ссылка при наведении курсора  -->
-            <a class="footer" href="#footer">
                 <i class="fa fa-chevron-down" aria-hidden="true" alt="Шеврон вниз" title="Прокрутка экрана вниз"> 
                 </i>
-            </a>
         </div>
+        </a>
         <!-- </div> -->
         <!-- // Контейнер кнопки  "Шеврон вниз" -->
 
