--- a/addition/app_development.html
+++ b/addition/app_development.html
@@ -77,11 +77,13 @@
         </div>
         </div>
         </div>
+        <a href="footer"> 
         <div class="header__arrow">
             <!--<div class="scrolldown">-->
                  <!-- Ссылка при наведении курсора  -->
                 <i class="fa fa-chevron-down" aria-hidden="true" alt="Шеврон вниз" title="Прокрутка экрана вниз"></i>
         </div>
+        </a>
 
     </div>
 
