--- a/addition/app_development.html
+++ b/addition/app_development.html
@@ -220,6 +220,7 @@
     FOOTER
 
     ....................................-->
+    <a id="footer"></a>
     <div class="footer">
         <div class="container">
             <div class="row">
