--- a/addition/app_development.html
+++ b/addition/app_development.html
@@ -77,7 +77,7 @@
         </div>
         </div>
         </div>
-        <a href="footer"> 
+        <a href="#footer"> 
         <div class="header__arrow">
             <!--<div class="scrolldown">-->
                  <!-- Ссылка при наведении курсора  -->
