--- a/addition/3D_modeling.html
+++ b/addition/3D_modeling.html
@@ -99,12 +99,14 @@
       </div>
       </div>
       </div>
+      <a href="#footer">
       <div class="header__arrow">
           <!-- <div class="scrolldown"> -->
                <!-- Ссылка при наведении курсора  -->
                <!-- <a href="jurdoc.html"  class="title"/a> -->
               <i class="fa fa-chevron-down" aria-hidden="true" alt="Шеврон вниз" title="Прокрутка экрана вниз"></i>
       </div>
+    </a>
   </div>
 
 
@@ -395,6 +397,7 @@
     FOOTER
 
     ....................................-->
+    <a id="footer"></a>
     <div class="footer">
         <div class="container">
             <div class="row">
