--- a/addition/3D_modeling.html
+++ b/addition/3D_modeling.html
@@ -99,7 +99,7 @@
       </div>
       </div>
       </div>
-      <a href="#footer">
+      <a href="#portfolio">
       <div class="header__arrow">
           <!-- <div class="scrolldown"> -->
                <!-- Ссылка при наведении курсора  -->
@@ -116,6 +116,7 @@
 
     ....................................-->
  <div class="portfolio-single-page">
+     <a id="portfolio"></a>
 
   <div class="container">
 
@@ -397,7 +398,7 @@
     FOOTER
 
     ....................................-->
-    <a id="footer"></a>
+    
     <div class="footer">
         <div class="container">
             <div class="row">
