--- a/addition/certificats.html
+++ b/addition/certificats.html
@@ -125,9 +125,11 @@
             <!-- Ряд шевронов навигации -->
             <div class="row">
                 <div class="col-4">
+                    <a href="app_development.html">
                     <div class="scroll">
                         <i class="fa fa-chevron-left" aria-hidden="true" alt="Шеврон влево" title="Предыдущая страница"></i>
                     </div>
+                    </a>
                 </div>
                 <div class="col-4">
                     <a href="index_addition.html">
@@ -137,9 +139,11 @@
                     </a>
                 </div>
                 <div class="col-4">
+                    <a href="3D_modeling.html">
                     <div class="scroll">
                         <i class="fa fa-chevron-right" aria-hidden="true" alt="Шеврон вправо" title="Следующая страница"></i>
                     </div>
+                    </a>
                 </div>
              </div>
              <!-- // Ряд шевронов навигации -->
