--- a/addition/certificats.html
+++ b/addition/certificats.html
@@ -29,6 +29,13 @@
 
  <link rel="shortcut icon" type="image/x-icon" href="img/favicon/favicon.ico">
 
+ <!-- Стили Bootstrap -->
+ <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"> -->
+
+ <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+ <script src="js/bootstrap.min.js"></script>
+
 </head>
 <body>
 
