--- a/addition/certificats.html
+++ b/addition/certificats.html
@@ -64,6 +64,10 @@
 
 </head>
 <body>
+<div class="scrollup">
+        <!-- Ссылка при наведении курсора  -->
+        <i class="fa fa-chevron-up" aria-hidden="true" alt="Шеврон ввезх" title="Прокрутка экрана вверх"></i>
+    </div> 
 
 
     <!-- ..................................
