--- a/addition/certificats.html
+++ b/addition/certificats.html
@@ -108,6 +108,12 @@
     <div class="portfolio-single-page">
 
         <div class="container">
+            <!-- Контейнер кнопки  "Шеврон вверх" -->
+            <div class="scrollup">
+                <!-- Ссылка при наведении курсора  -->
+                <i class="fa fa-chevron-up" aria-hidden="true" alt="Шеврон ввезх" title="Прокрутка экрана вверх">
+                </i>
+            </div> 
 
             <div class="title">
 
