--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -3,7 +3,7 @@
 <head>
     <!-- <meta charset="UTF-8"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta charset="UTF-8" name="description" content="Путешествие в районе турбазы Altay Sens"/>
+    <meta charset="UTF-8" name="description" content="Путешествие в районе турбазы Altay Sens">
     <title>Altay gifts</title>
 
 
