--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -1581,8 +1581,8 @@
   
    </section>
    
-  <! -- -->
-    <section id="map"></section> 
+  
+    <!-- <section id="map"></section> -->
     
     <footer class="text-center">       
        <div class="container">
