--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -1589,10 +1589,10 @@
            <a href="" class="pogo" clas="text-center">Altay&nbspgifts</a>
            <div class="social">
                <a href=""><i class="fa fa-telegram wow bounceInUp" data-wow-duration="0.4s" data-wow-delay="0.2s"></i></a>
-               <a href=""><i class="fa fa-twitter wow bounceInDown" data-wow-duration="0.5s" data-wow-delay="0.2s"></i></a>
-               <a href=""><i class="fa fa-instagram wow bounceInUp" data-wow-duration="0.6s" data-wow-delay="0.2s"></i></a>
-               <a href=""><i class="fa fa-linkedin wow bounceInDown" data-wow-duration="0.7s" data-wow-delay="0.2s"></i></a>
-               <a href=""><i class="fa fa-behance wow bounceInUp" data-wow-duration="0.8s" data-wow-delay="0.2s"></i></a>
+               <a href=""><i class="fa fa-github wow bounceInDown" data-wow-duration="0.5s" data-wow-delay="0.2s"></i></a>
+               <a href=""><i class="fa fa-vk wow bounceInUp" data-wow-duration="0.6s" data-wow-delay="0.2s"></i></a>
+               <!-- <a href=""><i class="fa fa-linkedin wow bounceInDown" data-wow-duration="0.7s" data-wow-delay="0.2s"></i></a> -->
+               <!-- <a href=""><i class="fa fa-behance wow bounceInUp" data-wow-duration="0.8s" data-wow-delay="0.2s"></i></a> -->
                
            </div>
            
