--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -1588,9 +1588,9 @@
        <div class="container">
            <a href="" class="pogo" clas="text-center">Altay&nbspgifts</a>
            <div class="social">
-    
-               <a href=""><i class="fa fa-telegram wow bounceInUp" data-wow-duration="0.4s" data-wow-delay="0.2s"></i></a>
-               <a href=""><i class="fa fa-github wow bounceInDown" data-wow-duration="0.5s" data-wow-delay="0.2s"></i></a>
+
+               <a href="https://t.me/leonid_alt_ru" target="_blank"><i class="fa fa-telegram wow bounceInUp" data-wow-duration="0.4s" data-wow-delay="0.2s"></i></a>
+               <a href="https://github.com/leonid-alt" target="_blank"><i class="fa fa-github wow bounceInDown" data-wow-duration="0.5s" data-wow-delay="0.2s"></i></a>
                <a href="https://vk.com/id797517622" target="_blank"><i class="fa fa-vk wow bounceInUp" data-wow-duration="0.6s" data-wow-delay="0.2s"></i></a>
                <!-- <a href=""><i class="fa fa-linkedin wow bounceInDown" data-wow-duration="0.7s" data-wow-delay="0.2s"></i></a> -->
                <!-- <a href=""><i class="fa fa-behance wow bounceInUp" data-wow-duration="0.8s" data-wow-delay="0.2s"></i></a> -->
