--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -1546,8 +1546,8 @@
                            </div>
                            
                            <div class="social-icon mt-20">
-                               <a href="" class="facebook">
-                                   <i class="fa fa-facebook"></i>
+                               <a href="" class="telegram">
+                                   <i class="fa fa-telegram"></i>
                                </a>
                                
                                <a href="" class="twitter">
