--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -1493,6 +1493,7 @@
                                       <div>
                                           <button type="submit" value="Send Now" class="button">Send Now</button>
                                       </div>
+                                      <a href="">Политика конфиденциальности</a>
                                   </div> 
                                 
                                </div>
