--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -1492,9 +1492,10 @@
                                   <div class="col-md-12">
                                       <div>
                                           <button type="submit" value="Send Now" class="button">Send Now</button>
-                                          <a href="">Политика конфиденциальности</a>
                                       </div>
-                                      
+                                      <div>
+                                          <a href="https://leonid-alt.github.io/travel/privacy-policy/" target="_blank">Политика конфиденциальности</a>
+                                      </div>
                                   </div> 
                                 
                                </div>
