--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -1490,10 +1490,9 @@
                                    </div>
                                    
                                   <div class="col-md-12">
-                                      <div>
+                                      <div class="center">
                                           <button type="submit" value="Send Now" class="button">Send Now</button>
-                                          <a href="https://leonid-alt.github.io/travel/privacy-policy/" target="_blank" class="center">
-                                              Политика конфиденциальности</a>
+                                          <a href="https://leonid-alt.github.io/travel/privacy-policy/" target="_blank">Политика конфиденциальности</a>
                                       </div>
                                   </div> 
                                 
