--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -1493,7 +1493,7 @@
                                       
                                       <div>
                                           <button type="submit" value="Send Now" class="button">Send Now</button>
-                                          <div align="right">
+                                          <div align="center">
                                               <a href="https://leonid-alt.github.io/travel/privacy-policy/" target="_blank">Политика конфиденциальности</a>
                                           </div>    
                                       </div>
