--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -1493,7 +1493,7 @@
                                         <div>
                                             <button type="submit" value="Send Now" class="button">Send Now</button>
                                             &nbsp; &nbsp; &nbsp;
-                                            <a href="https://leonid-alt.github.io/travel/privacy-policy/"
+                                            <a href="https://leonid-alt.github.io/travel/privacy-policy/privacy-policy.html"
                                                 target="_blank">
                                                 Политика конфиденциальности
                                             </a>
