--- a/travel/privacy-policy/privacy-policy.html
+++ b/travel/privacy-policy/privacy-policy.html
@@ -154,6 +154,8 @@
             </p>
         </div>
         <br><br><br>
+        
+        <h4>Я согласен с политикой конфиденциальности:</h4>
         <div class="buttons">
             <a href="" class="btn btn-pink">Принять</a>
             <a href="" class="btn btn-blue">Отклонить</a>
@@ -183,5 +185,6 @@
         </div>
     </footer>
 </body>
+
 
 </html>
