--- a/travel/privacy-policy/privacy-policy.html
+++ b/travel/privacy-policy/privacy-policy.html
@@ -155,7 +155,7 @@
         </div>
         <br><br><br>
         
-        <h4>Я согласен с политикой конфиденциальности:</h4>
+        <h4>Политику конфиденциальности:</h4><br>
         <div class="buttons">
             <a href="" class="btn btn-pink">Принять</a>
             <a href="" class="btn btn-blue">Отклонить</a>
@@ -188,3 +188,4 @@
 
 
 </html>
+
