--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -1492,10 +1492,10 @@
                                   <div class="col-md-12">
                                         <div>
                                             <button type="submit" value="Send Now" class="button">Send Now</button>
-                                            &nbsp;
+                                            
                                             <a href="https://leonid-alt.github.io/travel/privacy-policy/privacy-policy.html"
                                                 target="_blank">
-                                                Политика конфиденциальности
+                                               <p align="center"> Политика конфиденциальности</p>
                                             </a>
                                         </div>
                                     </div>
