--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -1494,7 +1494,7 @@
                                             <button type="submit" value="Send Now" class="button">Send Now</button>
                                             
                                             <a href="https://leonid-alt.github.io/travel/privacy-policy/privacy-policy.html"
-                                                target="_blank">
+                                                target="_blank"><br>
                                                <p align="center"> Политика конфиденциальности</p>
                                             </a>
                                         </div>
