--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -1494,8 +1494,8 @@
                                             <button type="submit" value="Send Now" class="button">Send Now</button>
                                             
                                             <a href="https://leonid-alt.github.io/travel/privacy-policy/privacy-policy.html"
-                                                target="_blank"><br>
-                                               <p align="center"> Политика конфиденциальности</p>
+                                                target="_blank">
+                                               <p align="center"><br>Политика конфиденциальности</p>
                                             </a>
                                         </div>
                                     </div>
