--- a/travel/privacy-policy/privacy-policy.html
+++ b/travel/privacy-policy/privacy-policy.html
@@ -66,13 +66,13 @@
 
     <div class="container">
 
-        <div class="about-item text-center">
+        <div class="about-text text-center">
             <i class="fa fa-eye"></i>
             <h3>Prpo.txt</h3>
             <hr>
         </div>
 
-        <div class="about-item text-left">
+        <div class="about-text text-left">
             <p>
 
             <h4>Введение</h4>
@@ -188,4 +188,5 @@
 
 
 </html>
+
 
