--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -1495,7 +1495,7 @@
                                             
                                             <a href="https://leonid-alt.github.io/travel/privacy-policy/privacy-policy.html"
                                                 target="_blank">
-                                               <p align="center"><br>Политика конфиденциальности</p>
+                                               <p align="center" text-decoration-line="underline"><br>Политика конфиденциальности</p>
                                             </a>
                                         </div>
                                     </div>
