--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -99,6 +99,7 @@
                             <li><a href="#port">PORTFOLIO</a></li>
                             <li><a href="#clients">CLIENTS</a></li>
                             <li><a href="#blog">BLOG</a></li>
+                            <li><a href="#cont">CONTACT</a></li>
                        <!-- <li><a href="#map">LOCATION</a></li> -->
                         </ul>
                     </nav>
