--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -1452,7 +1452,8 @@
                        <div class="contact-form">
                            <h4><b>SEND A MESSAGE</b></h4>
                            <p class="mt30">
-                               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus vero sunt quisquam culpa est assumenda, id quo saepe accusantium sit!
+                                   Хотите сотрудничать с профессиональной командой разработчиков и получить гарантированный результат от сайта?
+                                    Расскажите нам о том, что вы хотите получить и мы сделаем все возможное, чтобы реализовать ваше желание.
                            </p>
                            <div id="show_contact_msg"></div>
                            
