--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -1515,7 +1515,7 @@
                        <div class="box-info">
                            <h4><b>CONTACT INFO</b></h4>
                            <p class="mt30">
-                               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro fugit cum doloremque provident laboriosam iure.
+                               Позвоните нам или напишите.
                            </p>
                            <div class="item mt-20">
                                <i class="fa fa-map-marker"></i>
