--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -1452,8 +1452,8 @@
                        <div class="contact-form">
                            <h4><b>SEND A MESSAGE</b></h4>
                            <p class="mt30">
-                                   Хотите сотрудничать с профессиональной командой разработчиков и получить гарантированный результат от сайта?<br>
-                                    Расскажите нам о том, что вы хотите получить и мы сделаем все возможное, чтобы реализовать ваше желание.
+                                   Хотите сотрудничать с профессиональной командой разработчиков и получить гарантированный результат от сайта?
+                                &nbsp Расскажите нам о том, что вы хотите получить и мы сделаем все возможное, чтобы реализовать ваше желание.
                            </p>
                            <div id="show_contact_msg"></div>
                            
@@ -1515,7 +1515,7 @@
                        <div class="box-info">
                            <h4><b>CONTACT INFO</b></h4>
                            <p class="mt30">
-                               Позвоните нам или напишите.
+                               Позвоните нам или напишите:
                            </p>
                            <div class="item mt-20">
                                <i class="fa fa-map-marker"></i>
