--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -648,7 +648,7 @@
                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem perferendis quod debitis ab sed sapiente. Ducimus tempore, doloremque asperiores natus reprehenderit dignissimos beatae molestias tenetur cupiditate architecto culpa quibusdam velit magnam sapiente accusantium, repellat earum!</p>
 
                                            <div id="services-02-btn-01">
-                                               <a class="btn btn-general btn-yellow" href="#services" title="Get In Touch" role="button">Get In Touch</a>
+                                               <a class="btn btn-general btn-yellow" href="#contact" title="Get In Touch" role="button">Get In Touch</a>
                                            </div>
                                        </div>
                                    </div>
@@ -672,7 +672,7 @@
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem perferendis quod debitis ab sed sapiente. Ducimus tempore, doloremque asperiores natus reprehenderit dignissimos beatae molestias tenetur cupiditate architecto culpa quibusdam velit magnam sapiente accusantium, repellat earum!</p>
 
                                         <div id="services-02-btn-02">
-                                            <a class="btn btn-general btn-yellow" href="#services" title="Get In Touch" role="button">Get In Touch</a>
+                                            <a class="btn btn-general btn-yellow" href="#contact" title="Get In Touch" role="button">Get In Touch</a>
                                         </div>
                                     </div>
                                 </div>
@@ -698,7 +698,7 @@
                                         </p>
 
                                         <div id="services-02-btn-03">
-                                            <a class="btn btn-general btn-yellow" href="#services" title="Get In Touch" role="button">Get In Touch</a>
+                                            <a class="btn btn-general btn-yellow" href="#contact" title="Get In Touch" role="button">Get In Touch</a>
                                         </div>
                                     </div>
                                 </div>
@@ -723,7 +723,7 @@
                                         </p>
 
                                         <div id="services-02-btn-04">
-                                            <a class="btn btn-general btn-yellow" href="#services" title="Get In Touch" role="button">Get In Touch</a>
+                                            <a class="btn btn-general btn-yellow" href="#contact" title="Get In Touch" role="button">Get In Touch</a>
                                         </div>
                                     </div>
                                 </div>
@@ -749,7 +749,7 @@
                                         </p>
 
                                         <div id="services-02-btn-05">
-                                            <a class="btn btn-general btn-yellow" href="#services" title="Get In Touch" role="button">Get In Touch</a>
+                                            <a class="btn btn-general btn-yellow" href="#contact" title="Get In Touch" role="button">Get In Touch</a>
                                         </div>
                                     </div>
                                 </div>
