--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -124,8 +124,8 @@
                            
                        </p> 
                        <div class="buttons">
-                           <a href="" class="btn btn-pink">Start Free Trial</a>
-                           <a href="" class="btn btn-blue">Check Features</a>
+                           <a href="" class="btn btn-pink">Electrical</a>
+                           <a href="" class="btn btn-blue">Plumbing</a>
                        </div>
                        
                     </div>
