--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -120,8 +120,7 @@
                             through the fabulous <br>
                             mountain ALTAY</h1>
                        <p>
-                           Excepteur sint occaecat cupidatat non proident suntin culpa qui officia deserunt mollit lorem ipsum animid est laborum perspiciatis unde.
-                           
+                           Engineering equipment for private buildings, apartments and cottages.   
                        </p> 
                        <div class="buttons">
                            <a href="" class="btn btn-pink">Electrical</a>
