--- a/travel/index_travel.html
+++ b/travel/index_travel.html
@@ -82,7 +82,7 @@
         <div class="container">
             <div class="row">
                 <div class="content">
-                    <a href="" class="logo">Altay&nbspgifts</a>
+                    <a href="" class="logo">Altai&nbspgifts</a>
                     <div class="mobile-toggle">
                         <span></span>
                         <span></span>
@@ -116,9 +116,9 @@
             <div class="row">
                 <div class="col-sm-6 col-md-6"> 
                     <div class="mobile-app-banner-content wow bounceInUp">
-                        <h1>Journeys <br>
+                        <h1>Traveling <br>
                             through the fabulous <br>
-                            mountain ALTAY</h1>
+                            Altai Mountains</h1>
                        <p>
                            Engineering equipment for private buildings, apartments and cottages.   
                        </p> 
