--- a/bannerportfolio/index_bannerportfolio.html
+++ b/bannerportfolio/index_bannerportfolio.html
@@ -36,7 +36,9 @@
     <header class="header">
         <nav class="nav">
             <div class="logo-ico">
+                <a class="logo" href="https://leonid-alt.github.io/index.html">
                 <img src="./images/favicons/favicon.ico" alt="QR-логотип">
+                </a>
             </div>
             <div class="logo">BannerPortfolio</div>
             <div class="nav-links">
@@ -490,6 +492,7 @@
 
 
 </html>
+
 
 
 
