--- a/bannerportfolio/index_bannerportfolio.html
+++ b/bannerportfolio/index_bannerportfolio.html
@@ -36,7 +36,13 @@
     <header class="header">
         <nav class="nav">
             <div class="logo-ico">
-                <a class="logo-ico" href="https://leonid-alt.github.io/index.html" target="_self">
+                
+                <a class="logo-ico">
+                <script>
+                    var otherWindow = window.open();
+                    otherWindow.opener = null;
+                    otherWindow.location ="https://leonid-alt.github.io/index.html";
+                </script>
                 <img src="./images/favicons/favicon.ico" alt="QR-логотип">
                 </a>
             </div>
@@ -492,6 +498,7 @@
 
 
 </html>
+
 
 
 
