--- a/bannerportfolio/index_bannerportfolio.html
+++ b/bannerportfolio/index_bannerportfolio.html
@@ -36,13 +36,10 @@
     <header class="header">
         <nav class="nav">
             <div class="logo-ico">
-                
-                <a class="logo-ico">
-                    
+                <button onclick="window.history.back()">
+                <a class="logo-ico">  
                 <img src="./images/favicons/favicon.ico" alt="QR-логотип">
-                <script>
-                    onclick="window.history.back()"
-                </script>
+                </button>
                 </a>
             </div>
             <div class="logo">BannerPortfolio</div>
@@ -497,6 +494,7 @@
 
 
 </html>
+
 
 
 
