--- a/bannerportfolio/index_bannerportfolio.html
+++ b/bannerportfolio/index_bannerportfolio.html
@@ -35,7 +35,7 @@
     <a id="logo"></a>
     <header class="header">
         <nav class="nav">
-            <button onclick="window.history.back()">
+            <button type="button" onclick="window.history.back()">
             <div class="logo-ico">
                 
                 <a class="logo-ico">  
@@ -496,6 +496,7 @@
 
 
 </html>
+
 
 
 
