--- a/bannerportfolio/index_bannerportfolio.html
+++ b/bannerportfolio/index_bannerportfolio.html
@@ -37,7 +37,7 @@
         <nav class="nav">
             
             <div class="logo-ico">
-                <button type="button" onclick="window.history.back(); return false;" class="logo-ico">
+                <button type="button" onclick="window.history.go(-2)" class="logo-ico">
                 <a class="logo-ico">  
                 <img src="./images/favicons/favicon.ico" alt="QR-логотип">
                  </button>
@@ -496,6 +496,7 @@
 
 
 </html>
+
 
 
 
