--- a/index.html
+++ b/index.html
@@ -243,10 +243,16 @@
                   ADD INFO</a>
           </li>
 
-          <li class="nav-item">
+          <!-- <li class="nav-item">
               <a class="nav-link" href="travel/index_travel.html" target="_blank">
                   <i class="fa fa-binoculars" aria-hidden="true"></i>
                   TRAVEL</a>
+          </li> -->
+
+		  <li class="nav-item">
+              <a class="nav-link" href="electrical/index_electrical.html" target="_blank">
+                  <i class="fas fa-plug" aria-hidden="true"></i>
+                  ELECTRIC</a>
           </li>
 
           <li class="nav-item">
