--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
 		  <li class="nav-item">
               <a class="nav-link" href="electrical/index_electrical.html" target="_blank">
-                  <i class="fa-regular fa-build" aria-hidden="true"></i>
+                  <i class="fa fa-building" aria-hidden="true"></i>
                   ELECTRIC</a>
           </li>
 
