--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -384,8 +384,8 @@
                             </a>
                             <div id="videostory" class="mfp-hide"
                                 style="max-width: 75%; align-content: center; margin: 0 auto;">
-                                <iframe width="100%" height="460" src="./img/video/OVBS6578.mp4" frameborder="0"
-                                    allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                <iframe width="100%" height="460" src="./img/video/_OVBS6578.mp4" frameborder="0"
+                                     allowfullscreen></iframe>
                                 <!-- <iframe width="90%" height="460" src="https://vkvideo.ru/video-222009251_456239676" -->
                                 <!-- <iframe width="90%" height="460" src="https://www.youtube.com/embed/_mI0c9hRyIk" -->
 
