--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -164,7 +164,7 @@
                         <div class="feature-text text-center ">
                             <div class="img-hover1"></div>
                             <img src="img/list of works/2s.jpg" class="" alt="Ремонт осветительных прибороа">
-                            <h4>Ремонт осветительных прибороа</h4>
+                            <h4>Ремонт осветительных приборов</h4>
                             <p>
                                 Плафоны, люстры, бра и другие осветительные приборы.
                             </p>
