--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -948,8 +948,8 @@
                 <div class="filtering text-center col-sm-12">
                     <div class="filter">
                         <span data-filter='*' class="active">Все проекты</span>
-                        <span data-filter='.3_phases'>3х фазные схемы питания</span>
-                        <span data-filter='.1_phase'>Однофазные схемы питание</span>
+                        <span data-filter='.1_phases'>Однофазные схемы питание</span>
+                        <span data-filter='.3_phase'>3х фазные схемы питания</span>
                         <span data-filter='.uzo'>Устройства защитного отключения</span>
                         <span data-filter='.pribor'>Приборы оснастки питания</span>
                     </div>
