--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -948,8 +948,8 @@
                 <div class="filtering text-center col-sm-12">
                     <div class="filter">
                         <span data-filter='*' class="active">Все проекты</span>
-                        <span data-filter='.1_phase'>Однофазные схемы питание</span>
-                        <span data-filter='.3_phases'>3х фазные схемы питания</span>
+                        <span data-filter='.phase1'>Однофазные схемы питание</span>
+                        <span data-filter='.phases3'>3х фазные схемы питания</span>
                         <span data-filter='.uzo'>Устройства защитного отключения</span>
                         <span data-filter='.pribor'>Приборы оснастки питания</span>
                     </div>
@@ -1021,7 +1021,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 items 1_phase">
+                    <div class="col-lg-3 col-md-6 items phase1">
                         <div class="item-img">
                             <img src="img/13-3.jpg" class="img-responsive" alt="">
                             <div class="item-img-overlay">
@@ -1037,7 +1037,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 items 3_phases">
+                    <div class="col-lg-3 col-md-6 items phases3">
                         <div class="item-img">
                             <img src="img/04-31.jpg" class="img-responsive" alt="">
                             <div class="item-img-overlay">
@@ -1085,7 +1085,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 items 3_phases">
+                    <div class="col-lg-3 col-md-6 items phases3">
                         <div class="item-img">
                             <img src="img/10-3.jpg" class="img-responsive" alt="">
                             <div class="item-img-overlay">
@@ -1101,7 +1101,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 items 1_phase">
+                    <div class="col-lg-3 col-md-6 items phase1">
                         <div class="item-img">
                             <img src="img/11-3.jpg" class="img-responsive" alt="">
                             <div class="item-img-overlay">
@@ -1117,7 +1117,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 items 1_phase">
+                    <div class="col-lg-3 col-md-6 items phase1">
                         <div class="item-img">
                             <img src="img/2.jpg" class="img-responsive" alt="">
                             <div class="item-img-overlay">
