--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -1864,6 +1864,23 @@
     <script src="./js/jquery.responsiveTabs.min.js"></script>
     <script src="./js/isotope.pkgd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+    
+     <!-- убедиться, что у кнопки "Все проекты" есть класс active: -->
+    <script>
+document.addEventListener('DOMContentLoaded', function() {
+    // Добавляем класс active кнопке "Все проекты"
+    var allBtn = document.querySelector('span[data-filter="*"]');
+    if (allBtn) {
+        allBtn.classList.add('active');
+    }
+    
+    // Показываем все элементы
+    var items = document.querySelectorAll('.items');
+    items.forEach(function(item) {
+        item.style.display = 'block';
+    });
+});
+</script>
 </body>
 
 </html>
