--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -959,12 +959,12 @@
                 <div class="gallery full-width wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
                     <div class="col-lg-3 col-md-6 items pribor">
                         <div class="item-img">
-                            <img src="img/09.jpg" class="img-responsive" alt="">
+                            <img src="./img/09.jpg" class="img-responsive" alt="">
                             <div class="item-img-overlay">
                                 <div class="overlay-info full-width">
                                     <p>Камкабель | АВВГЭнг(А)</p>
                                     <h6>Электрика</h6>
-                                    <a href="img/09.jpg" class="popimg">
+                                    <a href="./img/09.jpg" class="popimg">
                                         <span class="icon">
                                             <i class="fa fa-arrow-right"></i>
                                         </span>
@@ -975,12 +975,12 @@
                     </div>
                     <div class="col-lg-3 col-md-6 items pribor">
                         <div class="item-img">
-                            <img src="img/05-3.jpg" class="img-responsive" alt="">
+                            <img src="./img/05-3.jpg" class="img-responsive" alt="">
                             <div class="item-img-overlay">
                                 <div class="overlay-info full-width">
                                     <p>УЗО | ABB</p>
                                     <h6>Электрика</h6>
-                                    <a href="img/05-3.jpg" class="popimg">
+                                    <a href="./img/05-3.jpg" class="popimg">
                                         <span class="icon">
                                             <i class="fa fa-arrow-right"></i>
                                         </span>
@@ -991,12 +991,12 @@
                     </div>
                     <div class="col-lg-3 col-md-6 items pribor">
                         <div class="item-img">
-                            <img src="img/06-3.jpg" class="img-responsive" alt="">
+                            <img src="./img/06-3.jpg" class="img-responsive" alt="">
                             <div class="item-img-overlay">
                                 <div class="overlay-info full-width">
                                     <p>Счетчик | Энергомера</p>
                                     <h6>Электрика</h6>
-                                    <a href="img/06-3.jpg" class="popimg">
+                                    <a href="./img/06-3.jpg" class="popimg">
                                         <span class="icon">
                                             <i class="fa fa-arrow-right"></i>
                                         </span>
@@ -1007,12 +1007,12 @@
                     </div>
                     <div class="col-lg-3 col-md-6 items pribor">
                         <div class="item-img">
-                            <img src="img/08-3.jpg" class="img-responsive" alt="">
+                            <img src="./img/08-3.jpg" class="img-responsive" alt="">
                             <div class="item-img-overlay">
                                 <div class="overlay-info full-width">
                                     <p>Блок выключателй и розетки | Schneider Electric</p>
                                     <h6>Электрика</h6>
-                                    <a href="img/08-3.jpg" class="popimg">
+                                    <a href="./img/08-3.jpg" class="popimg">
                                         <span class="icon">
                                             <i class="fa fa-arrow-right"></i>
                                         </span>
@@ -1023,12 +1023,12 @@
                     </div>
                     <div class="col-lg-3 col-md-6 items phase1">
                         <div class="item-img">
-                            <img src="img/13-3.jpg" class="img-responsive" alt="">
+                            <img src="./img/13-3.jpg" class="img-responsive" alt="">
                             <div class="item-img-overlay">
                                 <div class="overlay-info full-width">
                                     <p>Схема | принципиальна</p>
                                     <h6>Электрика</h6>
-                                    <a href="img/13-3.jpg" class="popimg">
+                                    <a href="./img/13-3.jpg" class="popimg">
                                         <span class="icon">
                                             <i class="fa fa-arrow-right"></i>
                                         </span>
@@ -1039,12 +1039,12 @@
                     </div>
                     <div class="col-lg-3 col-md-6 items phases3">
                         <div class="item-img">
-                            <img src="img/04-31.jpg" class="img-responsive" alt="">
+                            <img src="./img/04-31.jpg" class="img-responsive" alt="">
                             <div class="item-img-overlay">
                                 <div class="overlay-info full-width">
                                     <p>Схема питания | 0.4 КВ</p>
                                     <h6>Электрика</h6>
-                                    <a href="img/04-31.jpg" class="popimg">
+                                    <a href="./img/04-31.jpg" class="popimg">
                                         <span class="icon">
                                             <i class="fa fa-arrow-right"></i>
                                         </span>
@@ -1055,12 +1055,12 @@
                     </div>
                     <div class="col-lg-3 col-md-6 items uzo">
                         <div class="item-img">
-                            <img src="img/12-3.jpg" class="img-responsive" alt="">
+                            <img src="./img/12-3.jpg" class="img-responsive" alt="">
                             <div class="item-img-overlay">
                                 <div class="overlay-info full-width">
                                     <p>УЗО | Принцип работы</p>
                                     <h6>Электрика</h6>
-                                    <a href="img/12-3.jpg" class="popimg">
+                                    <a href="./img/12-3.jpg" class="popimg">
                                         <span class="icon">
                                             <i class="fa fa-arrow-right"></i>
                                         </span>
@@ -1071,12 +1071,12 @@
                     </div>
                     <div class="col-lg-3 col-md-6 items uzo">
                         <div class="item-img">
-                            <img src="img/09-3.jpg" class="img-responsive" alt="">
+                            <img src="./img/09-3.jpg" class="img-responsive" alt="">
                             <div class="item-img-overlay">
                                 <div class="overlay-info full-width">
                                     <p>УЗО | Схема</p>
                                     <h6>Электрика</h6>
-                                    <a href="img/09-3.jpg" class="popimg">
+                                    <a href="./img/09-3.jpg" class="popimg">
                                         <span class="icon">
                                             <i class="fa fa-arrow-right"></i>
                                         </span>
@@ -1087,12 +1087,12 @@
                     </div>
                     <div class="col-lg-3 col-md-6 items phases3">
                         <div class="item-img">
-                            <img src="img/10-3.jpg" class="img-responsive" alt="">
+                            <img src="./img/10-3.jpg" class="img-responsive" alt="">
                             <div class="item-img-overlay">
                                 <div class="overlay-info full-width">
                                     <p>Logo | Branding</p>
                                     <h6>Электрика</h6>
-                                    <a href="img/10-3.jpg" class="popimg">
+                                    <a href="./img/10-3.jpg" class="popimg">
                                         <span class="icon">
                                             <i class="fa fa-arrow-right"></i>
                                         </span>
@@ -1103,12 +1103,12 @@
                     </div>
                     <div class="col-lg-3 col-md-6 items phase1">
                         <div class="item-img">
-                            <img src="img/11-3.jpg" class="img-responsive" alt="">
+                            <img src="./img/11-3.jpg" class="img-responsive" alt="">
                             <div class="item-img-overlay">
                                 <div class="overlay-info full-width">
                                     <p>Logo | Branding</p>
                                     <h6>Электрика</h6>
-                                    <a href="img/11-3.jpg" class="popimg">
+                                    <a href="./img/11-3.jpg" class="popimg">
                                         <span class="icon">
                                             <i class="fa fa-arrow-right"></i>
                                         </span>
@@ -1119,12 +1119,12 @@
                     </div>
                     <div class="col-lg-3 col-md-6 items phase1">
                         <div class="item-img">
-                            <img src="img/2.jpg" class="img-responsive" alt="">
+                            <img src="./img/2.jpg" class="img-responsive" alt="">
                             <div class="item-img-overlay">
                                 <div class="overlay-info full-width">
                                     <p>Схема | Проходной выключатель</p>
                                     <h6>Электрика</h6>
-                                    <a href="img/2.jpg" class="popimg">
+                                    <a href="./img/2.jpg" class="popimg">
                                         <span class="icon">
                                             <i class="fa fa-arrow-right"></i>
                                         </span>
