--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -1886,7 +1886,7 @@ window.addEventListener('load', function() {
             allBtn.dispatchEvent(event);
             
             // Скрываем сообщение после успеха
-            console.log('✅ Фильтр "Все проекты" активирован');
+            //console.log('✅ Фильтр "Все проекты" активирован');
         }
     }, 50); // Увеличьте до 1000 если нужно
 });
