--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -1886,7 +1886,7 @@
                 allBtn.dispatchEvent(event);
             
             // Скрываем сообщение после успеха
-            console.log('✅ Фильтр "Все проекты" активирован');
+            //console.log('✅ Фильтр "Все проекты" активирован');
         }
     }, 10); // Увеличьте до 1000 если нужно
 });
