--- a/electrical/index_electrical.html
+++ b/electrical/index_electrical.html
@@ -712,14 +712,14 @@
                             <i class="fa fa-edit"></i>
                         </div>
                         <div class="content">
-                            <h6>Creative Design</h6>
+                            <h6>Проектирование и планирование электроснабжения</h6>
                             <div class="subtitle">
                                 Lorem ipsum dolor sit amet,
                             </div>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit iusto veniam, animi nam
-                                explicabo est adipisci tempora nesciunt ab pariatur necessitatibus autem laudantium non
-                                sint facere.
+                                Оснащение жилья электрикой — это комплексный процесс, который включает проектирование, подбор оборудования и грамотный монтаж всех электрических систем. 
+                                На этапе планирования учитываются мощность подключаемых приборов, зонирование помещений, требования безопасности и перспективы увеличения нагрузки. 
+                                Правильно разработанный проект позволяет избежать перегрузок сети, обеспечить равномерное распределение электроэнергии и создать удобную систему управления освещением и техникой.
                             </p>
                         </div>
                     </div>
